deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grantdeck
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grantdeck
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: als
      port: 8001
      targetPort: als
      protocol: TCP
      appProtocol: kubernetes.io/h2c
